ICE-9482 fixed issues with javascript errors when resizing the window and improved the window resize listener to avoid registering it multiple times; fixed issue with the title not updating in day view when the day has no events; added improvements to the user event details interface that were missing in the sidebar mode; fixed tooltip positioning; modified layout of buttons in the sidebar event details dialog to avoid displaying misaligned buttons due to not having enough width; added styling to prevent text selection when double clicking on a day in month view to add a new event; refactored methods to set navigation and resize listeners
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@49705 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/schedule/schedule.css
@@ -186,3 +186,20 @@
 .ice-ace-schedule .schedule-selected {
 	text-decoration: underline;
 }
+.ice-ace-schedule .schedule-sidebar .schedule-details-content {
+	padding: 10px;
+}
+.ice-ace-schedule .schedule-sidebar .schedule-details-content > span {
+	display: block;
+	margin-top: 5px;
+}
+.ice-ace-schedule .schedule-sidebar .schedule-details-content > span > span > span {
+	display: block;
+}
+.ice-ace-schedule .schedule-days .day {
+   -moz-user-select: none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
